# nanomsg

./: .gitignore  CMakeLists.txt  howto.txt  pingpong.c  pingpong.sh  pingpong_int.c  pingpong_ipc.sh  pingpongint.sh  pipeline.c  pushpullbm.sh  run-config
cpp/: CMakeLists.txt  parameters.cpp  parameters.h  pubsub_bm.cpp  pubsubbm.sh
cpp/run/: pubsubbm.sh  pushpullbm-ts.sh  pushpullbm.sh  reqrepbm.sh  surveybm.sh
cpp/src/: functions.cpp  parameters.cpp  parameters.h  pubsub_bm.cpp  pushpull-bm-ts.cpp  pushpull-bm-ts2.cpp  pushpull_bm.cpp  reqrep.cpp  reqrep_bm.cpp  socketmng.cpp  socketmng.h  survey_bm.cpp  surveyexample.c
example/: reqrep  reqrep.cpp  server  server.c
shm-example/accounting-server/run/: shm-server.sh
shm-example/accounting-server/src/: agent.cpp  agentworkercomm.cpp  agentworkercomm.h  parameters.cpp  parameters.h  server.cpp  shm-reader.cpp  shm-writer.cpp  shmmanager.cpp  socketmng.cpp  socketmng.h
shm-example/low-level-server/: CMakeLists.txt
shm-example/low-level-server/run/: shm-agent.sh  shm-agent2.sh  shm-server.sh
shm-example/low-level-server/src/: agent.cpp  parameters.cpp  parameters.h  server.cpp  shmmanager.h  socketmng.cpp  socketmng.h
